WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133968
String::isolatedCopy doesn’t return an isolated copy when used on an rvalue reference
https://bugs.webkit.org/show_bug.cgi?id=133968
Summary
String::isolatedCopy doesn’t return an isolated copy when used on an rvalue r...
mitz
Reported
2014-06-16 21:29:52 PDT
Patch forthcoming.
Attachments
Remove const qualifier from isolatedCopy() &&
(3.15 KB, patch)
2014-06-16 21:34 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-06-16 21:34:57 PDT
Created
attachment 233215
[details]
Remove const qualifier from isolatedCopy() &&
WebKit Commit Bot
Comment 2
2014-06-16 21:35:43 PDT
Attachment 233215
[details]
did not pass style-queue: ERROR: Source/WTF/wtf/text/WTFString.cpp:691: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2014-06-17 09:17:06 PDT
Fixed in <
http://trac.webkit.org/r170055
>
mitz
Comment 4
2014-06-27 11:47:29 PDT
<
rdar://problem/17487072
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug