String::isolatedCopy doesn’t return an isolated copy when used on an rvalue reference https://bugs.webkit.org/show_bug.cgi?id=133968

Reviewed by Anders Carlsson.


Source/WTF:
Made the rvalue reference overload of isolatedCopy() non-const, so that std::move(*this) is
an rvalue reference that can be moved, rather than copied, into the returned String.

* wtf/text/WTFString.cpp:
(WTF::String::isolatedCopy):
* wtf/text/WTFString.h:

Tools:
* TestWebKitAPI/Tests/WTF/WTFString.cpp:
(TestWebKitAPI::TEST): Added a test that an isolated copy of an rvalue reference doesn’t
share an impl() with the original.



Canonical link: https://commits.webkit.org/151928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170055 268f45cc-cd09-0410-ab3c-d52691b4dbfc